--- a/shopping-cart/src/main/resources/application.properties
+++ b/shopping-cart/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=shopping-cart
+
+# DataSource Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/shopme-db
+spring.datasource.username=root
+spring.datasource.password=Mayur@565656
+
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
