--- a/shopping-cart/src/main/resources/application.properties
+++ b/shopping-cart/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=shopping-cart
 
 # DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/shopme-db
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Mayur@565656
 
